[package]
name = "windows-error"
version = "1.0.0"
authors = ["Douman <douman@gmx.se>"]
description = "Library to provide wrapper over Windows errors"
documentation = "http://doumanash.github.io/windows-error-rs/doc/windows_error/index.html"
license = "MIT"
keywords = ["Windows", "winapi"]

[dependencies]
winapi = "^0.2.5"
kernel32-sys = "^0.2.1"
